--- a/packages/component-one/package.json
+++ b/packages/component-one/package.json
@@ -2,8 +2,8 @@
   "name": "@test-repo/component-one",
   "version": "1.0.0",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc -b",
     "clean": "rm -rf ./dist && rm tsconfig.tsbuildinfo",
