--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -1,46 +1,38 @@
+name: Publish Package
+
 on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
+
 jobs:
-  publish:
-    name: Publish
+  build:
     runs-on: ubuntu-latest
-      publish:
-    name: Publish
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Cache node_modules
-        id: cache-modules
-        uses: actions/cache@v1
-        with:
-          path: node_modules
-          key: 12.x-${{ runner.OS }}-build-${{ hashFiles('package.json') }}
-      - name: Git Identity
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: Configure CI Git User
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/$GITHUB_REPOSITORY
+          git config --global user.name '@simonpalepin'
+          git config --global user.email 'simonpalepin@users.noreply.github.com'
+          git remote set-url origin https://$GITHUB_ACTOR:$ACCESS_TOKEN@github.com/simonpalepin/test-repo
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Install
-        if: steps.cache-modules.outputs.cache-hit != 'true'
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      - name: Checkout and pull branch
+        run: git checkout "${GITHUB_REF:11}" && git pull
+      - name: Install Packages
         run: yarn install
-      - name: Build
-        run: yarn build
-      - name: Setup Node ${{ matrix.node_version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-          registry-url: 'https://registry.npmjs.org'
-      - name: Publish
-        run: yarn publish:all
+      - name: Authenticate with Registry
+        run: |
+          yarn logout
+          echo "@apollo-elements:registry=http://registry.npmjs.org/" > .npmrc
+          echo "registry=http://registry.npmjs.org/" >> .npmrc
+          echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> .npmrc
+          npm whoami
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - name: Publish package
+        run: npm run publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
