--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "lerna run build --stream",
     "clean": "lerna run clean --parallel",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "lerna publish --message 'release new versions'"
   },
   "repository": {
     "type": "git",
