--- a/packages/component-one/package.json
+++ b/packages/component-one/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
+  "homepage": "https://github.com/simonpalepin/test-repo/tree/main/packages/component-one#readme",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.com"
+  },
   "scripts": {
     "build": "tsc -b",
     "clean": "rm -rf ./dist && rm tsconfig.tsbuildinfo",
