--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Test mono repo",
   "main": "index.js",
-  "private": true,
   "workspaces": [
     "packages/*"
   ],
@@ -11,7 +10,7 @@
     "build": "lerna run build --stream",
     "clean": "lerna run clean --parallel",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "lerna publish --message 'release new versions'"
+    "publish": "lerna publish --yes from-git --message 'release new versions'"
   },
   "repository": {
     "type": "git",
