--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Test mono repo",
   "main": "index.js",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
