--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -1,45 +1,56 @@
-name: Publish Package
-
+name: Publish Packages
 on:
   push:
     branches:
       - master
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: yarn
+      - run: yarn test
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
         uses: actions/checkout@v1
-      - name: Configure CI Git User
-        run: |
-          git config --global user.name '@simonpalepin'
-          git config --global user.email 'simonpalepin@users.noreply.github.com'
-          git remote set-url origin https://$GITHUB_ACTOR:$ACCESS_TOKEN@github.com/simonpalepin/test-repo
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      - name: Checkout and pull branch
-        run: git checkout "${GITHUB_REF:11}" && git pull
-      - name: Install Packages
-        run: yarn install
-      - name: Authenticate with Registry
-        run: |
-          yarn logout
-          echo "@test-repo:registry=http://registry.npmjs.org/" > .npmrc
-          echo "registry=http://registry.npmjs.org/" >> .npmrc
-          echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> .npmrc
-          npm whoami
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      - name: Build
-        run: yarn build
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
-          registry-url: 'https://registry.npmjs.org'
-      - name: Publish package
-        run: yarn publish
+          node-version: 12
+      - name: Install Dependencies
+        run: yarn
+
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - run: yarn
+      - run: yarn publish
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
+
+  publish-gpr:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://npm.pkg.github.com/
+          scope: "@simonpalepin"
+      - run: yarn
+      - run: yarn publish
+        env:
+          GITHUB_TOKEN: ${{secrets.ACCESS_TOKEN}}
