--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,11 @@
   "packages": ["packages/**"],
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "publish": {
+    "conventionalCommits": true,
+    "message": "chore(release): publish",
+    "registry": "https://npm.pkg.github.com",
+    "allowBranch": "master"
+  }
 }
