--- a/packages/component-one/package.json
+++ b/packages/component-one/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@test-repo/component-one",
-  "version": "1.0.1",
+  "name": "@simonpalepin/component-one",
+  "version": "1.0.2",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "homepage": "https://github.com/simonpalepin/test-repo/tree/main/packages/component-one#readme",
@@ -12,5 +12,6 @@
     "build": "tsc -b",
     "clean": "rm -rf ./dist && rm tsconfig.tsbuildinfo",
     "watch": "tsc -b -w --preserveWatchOutput"
-  }
+  },
+  "gitHead": "afeec3aae2ab8699470edbd0f13d544374913d7e"
 }
