--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
   "publish": {
     "conventionalCommits": true,
     "message": "chore(release): publish",
-    "registry": "https://npm.pkg.github.com",
+    "registry": "registry.npmjs.org",
     "allowBranch": "master"
   }
 }
