--- a/packages/component-one/package.json
+++ b/packages/component-one/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@simonpalepin/component-one",
   "version": "1.0.5",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "homepage": "https://github.com/simonpalepin/test-repo/tree/main/packages/component-one#readme",
   "repository": {
     "type": "git",
