--- a/packages/component-two/package.json
+++ b/packages/component-two/package.json
@@ -18,7 +18,7 @@
     }
   ],
   "dependencies": {
-    "@test-repo/component-one": "~1.0"
+    "@simonpalepin/component-one": "~1.0"
   },
   "scripts": {
     "build": "tsc -b",
