--- a/packages/component-two/package.json
+++ b/packages/component-two/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@simonpalepin/component-two",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/simonpalepin/test-repo/tree/main/packages/component-two#readme",
@@ -18,7 +18,7 @@
     }
   ],
   "dependencies": {
-    "@simonpalepin/component-one": "~1.0"
+    "@simonpalepin/component-one": "^1.0.22"
   },
   "scripts": {
     "build": "tsc -b",
